crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_props_wrapping_children.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useSignal } from "@qwik.dev/core";
export const Works = component$(({ fromProps }) => {
  let fromLocal = useSignal(0);
  return (
    <div>
      {fromLocal}
      {fromProps}
      {fromLocal + fromProps}
      {{ props: fromProps }}
      {{ local: fromLocal }}
      {{ props: fromProps, local: fromLocal }}
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
const _hf0 = (p0, p1) => p1 + p0.fromProps;
const _hf0_str = "p1+p0.fromProps";
const _hf1 = (p0) => ({
  props: p0.fromProps,
});
const _hf1_str = "{props:p0.fromProps}";
const _hf2 = (p0, p1) => ({
  props: p0.fromProps,
  local: p1,
});
const _hf2_str = "{props:p0.fromProps,local:p1}";
import { useSignal } from "@qwik.dev/core";
export const Works = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl((_rawProps) => {
    let fromLocal = useSignal(0);
    return /* @__PURE__ */ _jsxSorted(
      "div",
      null,
      null,
      [
        fromLocal,
        _wrapProp(_rawProps, "fromProps"),
        _fnSignal(_hf0, [_rawProps, fromLocal], _hf0_str),
        _fnSignal(_hf1, [_rawProps], _hf1_str),
        {
          local: fromLocal,
        },
        _fnSignal(_hf2, [_rawProps, fromLocal], _hf2_str),
      ],
      1,
      "u6_0",
    );
  }, "Works_component_t45qL4vNGv0"),
);
=== DIAGNOSTICS ===

[]
