crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_qwik_react_inline.snap
---
source: src/test.rs
expression: output
---
==INPUT==

import {
  componentQrl,
  inlinedQrl,
  useLexicalScope,
  useHostElement,
  useStore,
  useTaskQrl,
  noSerialize,
  SkipRerender,
  implicit$FirstArg,
} from "@qwik.dev/core";
import { jsx, Fragment } from "@qwik.dev/core/jsx-runtime";
import { isBrowser, isServer } from "@qwik.dev/core";

function qwikifyQrl(reactCmpQrl) {
  return /*#__PURE__*/ componentQrl(
    inlinedQrl(
      (props) => {
        const [reactCmpQrl] = useLexicalScope();
        const hostElement = useHostElement();
        const store = useStore({});
        let run;
        if (props["client:visible"]) run = "visible";
        else if (props["client:load"] || props["client:only"]) run = "load";
        useTaskQrl(
          inlinedQrl(
            async (track) => {
              const [hostElement, props, reactCmpQrl, store] = useLexicalScope();
              track(props);
              if (isBrowser) {
                if (store.data)
                  store.data.root.render(
                    store.data.client.Main(store.data.cmp, filterProps(props)),
                  );
                else {
                  const [Cmp, client] = await Promise.all([
                    reactCmpQrl.resolve(),
                    import("./client-f762f78c.js"),
                  ]);
                  let root;
                  if (hostElement.childElementCount > 0)
                    root = client.hydrateRoot(
                      hostElement,
                      client.Main(Cmp, filterProps(props), store.event),
                    );
                  else {
                    root = client.createRoot(hostElement);
                    root.render(client.Main(Cmp, filterProps(props)));
                  }
                  store.data = noSerialize({
                    client,
                    cmp: Cmp,
                    root,
                  });
                }
              }
            },
            "qwikifyQrl_component_useWatch_x04JC5xeP1U",
            [hostElement, props, reactCmpQrl, store],
          ),
          {
            run,
          },
        );
        if (isServer && !props["client:only"]) {
          const jsx$1 = Promise.all([reactCmpQrl.resolve(), import("./server-9ac6caad.js")]).then(
            ([Cmp, server]) => {
              const html = server.render(Cmp, filterProps(props));
              return /*#__PURE__*/ jsx(Host, {
                dangerouslySetInnerHTML: html,
                [_IMMUTABLE]: ["dangerouslySetInnerHTML"],
              });
            },
          );
          return /*#__PURE__*/ jsx(Fragment, {
            children: jsx$1,
          });
        }
        return /*#__PURE__*/ jsx(Host, {
          children: /*#__PURE__*/ jsx(SkipRerender, {}),
        });
      },
      "qwikifyQrl_component_zH94hIe0Ick",
      [reactCmpQrl],
    ),
    {
      tagName: "qwik-wrap",
    },
  );
}
const filterProps = (props) => {
  const obj = {};
  Object.keys(props).forEach((key) => {
    if (!key.startsWith("client:")) obj[key] = props[key];
  });
  return obj;
};
const qwikify$ = implicit$FirstArg(qwikifyQrl);

async function renderToString(rootNode, opts) {
  const mod = await import("./server-9ac6caad.js");
  const result = await mod.renderToString(rootNode, opts);
  const styles = mod.getGlobalStyleTag(result.html);
  const finalHtml = styles + result.html;
  return {
    ...result,
    html: finalHtml,
  };
}

export { qwikify$, qwikifyQrl, renderToString };

============================= ../node_modules/@qwik.dev/react/index.qwik.mjs ==

import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl, inlinedQrl, useLexicalScope, useHostElement, useStore, useTaskQrl, noSerialize, SkipRerender, implicit$FirstArg } from "@qwik.dev/core";
import { Fragment } from "@qwik.dev/core/jsx-runtime";
import { isBrowser, isServer } from "@qwik.dev/core";
function qwikifyQrl(reactCmpQrl) {
    return /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
        const [reactCmpQrl] = useLexicalScope();
        const hostElement = useHostElement();
        const store = useStore({});
        let run;
        if (props["client:visible"]) run = "visible";
        else if (props["client:load"] || props["client:only"]) run = "load";
        useTaskQrl(/*#__PURE__*/ inlinedQrl(async (track)=>{
            const [hostElement, props, reactCmpQrl, store] = useLexicalScope();
            track(props);
            if (isBrowser) {
                if (store.data) store.data.root.render(store.data.client.Main(store.data.cmp, filterProps(props)));
                else {
                    const [Cmp, client] = await Promise.all([
                        reactCmpQrl.resolve(),
                        import("./client-f762f78c.js")
                    ]);
                    let root;
                    if (hostElement.childElementCount > 0) root = client.hydrateRoot(hostElement, client.Main(Cmp, filterProps(props), store.event));
                    else {
                        root = client.createRoot(hostElement);
                        root.render(client.Main(Cmp, filterProps(props)));
                    }
                    store.data = noSerialize({
                        client,
                        cmp: Cmp,
                        root
                    });
                }
            }
        }, "qwikifyQrl_component_useWatch_x04JC5xeP1U", [
            hostElement,
            props,
            reactCmpQrl,
            store
        ]), {
            run
        });
        if (isServer && !props["client:only"]) {
            const jsx$1 = Promise.all([
                reactCmpQrl.resolve(),
                import("./server-9ac6caad.js")
            ]).then(([Cmp, server])=>{
                const html = server.render(Cmp, filterProps(props));
                return /*#__PURE__*/ _jsxSorted(Host, {
                    dangerouslySetInnerHTML: html,
                    [_IMMUTABLE]: [
                        "dangerouslySetInnerHTML"
                    ]
                }, null, null, 3, "8p_0");
            });
            return /*#__PURE__*/ _jsxSorted(Fragment, null, null, jsx$1, 1, "8p_1");
        }
        return /*#__PURE__*/ _jsxSorted(Host, null, null, /*#__PURE__*/ _jsxSorted(SkipRerender, null, null, null, 3, "8p_2"), 1, "8p_3");
    }, "qwikifyQrl_component_zH94hIe0Ick", [
        reactCmpQrl
    ]), {
        tagName: "qwik-wrap"
    });
}
const filterProps = (props)=>{
    const obj = {};
    Object.keys(props).forEach((key)=>{
        if (!key.startsWith("client:")) obj[key] = props[key];
    });
    return obj;
};
const qwikify$ = implicit$FirstArg(qwikifyQrl);
async function renderToString(rootNode, opts) {
    const mod = await import("./server-9ac6caad.js");
    const result = await mod.renderToString(rootNode, opts);
    const styles = mod.getGlobalStyleTag(result.html);
    const finalHtml = styles + result.html;
    return {
        ...result,
        html: finalHtml
    };
}
export { qwikify$, qwikifyQrl, renderToString };
export { filterProps as _auto_filterProps };


Some("{\"version\":3,\"sources\":[\"/user/qwik/node_modules/@qwik.dev/react/index.qwik.mjs\"],\"names\":[],\"mappings\":\";AAAA,SACE,YAAY,EACZ,UAAU,EACV,eAAe,EACf,cAAc,EACd,QAAQ,EACR,UAAU,EACV,WAAW,EACX,YAAY,EACZ,iBAAiB,QACZ,iBAAiB;AACxB,SAAc,QAAQ,QAAQ,6BAA6B;AAC3D,SAAS,SAAS,EAAE,QAAQ,QAAQ,iBAAiB;AAErD,SAAS,WAAW,WAAW;IAC7B,OAAO,WAAW,GAAG,sCAEjB,CAAC;QACC,MAAM,CAAC,YAAY,GAAG;QACtB,MAAM,cAAc;QACpB,MAAM,QAAQ,SAAS,CAAC;QACxB,IAAI;QACJ,IAAI,KAAK,CAAC,iBAAiB,EAAE,MAAM;aAC9B,IAAI,KAAK,CAAC,cAAc,IAAI,KAAK,CAAC,cAAc,EAAE,MAAM;QAC7D,oCAEI,OAAO;YACL,MAAM,CAAC,aAAa,OAAO,aAAa,MAAM,GAAG;YACjD,MAAM;YACN,IAAI;gBACF,IAAI,MAAM,IAAI,EACZ,MAAM,IAAI,CAAC,IAAI,CAAC,MAAM,CACpB,MAAM,IAAI,CAAC,MAAM,CAAC,IAAI,CAAC,MAAM,IAAI,CAAC,GAAG,EAAE,YAAY;qBAElD;oBACH,MAAM,CAAC,KAAK,OAAO,GAAG,MAAM,QAAQ,GAAG,CAAC;wBACtC,YAAY,OAAO;wBACnB,MAAM,CAAC;qBACR;oBACD,IAAI;oBACJ,IAAI,YAAY,iBAAiB,GAAG,GAClC,OAAO,OAAO,WAAW,CACvB,aACA,OAAO,IAAI,CAAC,KAAK,YAAY,QAAQ,MAAM,KAAK;yBAE/C;wBACH,OAAO,OAAO,UAAU,CAAC;wBACzB,KAAK,MAAM,CAAC,OAAO,IAAI,CAAC,KAAK,YAAY;oBAC3C;oBACA,MAAM,IAAI,GAAG,YAAY;wBACvB;wBACA,KAAK;wBACL;oBACF;gBACF;;QAEJ;;;;;YAIF;YACE;QACF;QAEF,IAAI,YAAY,CAAC,KAAK,CAAC,cAAc,EAAE;YACrC,MAAM,QAAQ,QAAQ,GAAG,CAAC;gBAAC,YAAY,OAAO;gBAAI,MAAM,CAAC;aAAwB,EAAE,IAAI,CACrF,CAAC,CAAC,KAAK,OAAO;gBACZ,MAAM,OAAO,OAAO,MAAM,CAAC,KAAK,YAAY;gBAC5C,OAAO,WAAW,GAAG,WAAI;oBACvB,yBAAyB;oBACzB,CAAC,WAAW,EAAE;wBAAC;qBAA0B;;YAE7C;YAEF,OAAO,WAAW,GAAG,WAAI,sBACb;QAEd;QACA,OAAO,WAAW,GAAG,WAAI,kBACb,WAAW,GAAG,WAAI;IAEhC;;QAIF;QACE,SAAS;IACX;AAEJ;AACA,MAAM,cAAc,CAAC;IACnB,MAAM,MAAM,CAAC;IACb,OAAO,IAAI,CAAC,OAAO,OAAO,CAAC,CAAC;QAC1B,IAAI,CAAC,IAAI,UAAU,CAAC,YAAY,GAAG,CAAC,IAAI,GAAG,KAAK,CAAC,IAAI;IACvD;IACA,OAAO;AACT;AACA,MAAM,WAAW,kBAAkB;AAEnC,eAAe,eAAe,QAAQ,EAAE,IAAI;IAC1C,MAAM,MAAM,MAAM,MAAM,CAAC;IACzB,MAAM,SAAS,MAAM,IAAI,cAAc,CAAC,UAAU;IAClD,MAAM,SAAS,IAAI,iBAAiB,CAAC,OAAO,IAAI;IAChD,MAAM,YAAY,SAAS,OAAO,IAAI;IACtC,OAAO;QACL,GAAG,MAAM;QACT,MAAM;IACR;AACF;AAEA,SAAS,QAAQ,EAAE,UAAU,EAAE,cAAc,GAAG\"}")
== DIAGNOSTICS ==

[]
