crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_reg_ctx_name_segments.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$, server$ } from "@qwik.dev/core";
import { foo } from "./foo";
export const Works = component$((props) => {
  const text = "hola";
  return (
    <>
      <div onClick$={server$(() => console.log("in server", text))}></div>
      <div onClick$={() => foo()}></div>
    </>
  );
});

=== test.js ===
import "./foo";
import { componentQrl } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/core";
import { _regSymbol } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const Works = /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ inlinedQrl((props) => {
    return /*#__PURE__*/ _jsxSorted(
      _Fragment,
      null,
      null,
      [
        /*#__PURE__*/ _jsxSorted(
          "div",
          {
            "q-e:click": serverQrl(
              /*#__PURE__*/ inlinedQrl(
                /*#__PURE__*/ _regSymbol(() => console.log("in server", "hola"), "YY85RDCwwvA"),
                "Works_component_Fragment_div_q_e_click_server_YY85RDCwwvA",
              ),
            ),
          },
          null,
          null,
          2,
          null,
        ),
        /*#__PURE__*/ _jsxSorted(
          "div",
          null,
          {
            "q-e:click": /*#__PURE__*/ _noopQrl(
              "Works_component_Fragment_div_q_e_click_0UiSo8yqgZw",
            ),
          },
          null,
          3,
          null,
        ),
      ],
      1,
      "u6_0",
    );
  }, "Works_component_t45qL4vNGv0"),
);
== DIAGNOSTICS ===

[]
