crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_reg_ctx_name_segments_inlined.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { $, component$, server$ } from "@qwik.dev/core";
export const Works = component$((props) => {
  const text = "hola";
  return <div onClick$={server$(() => console.log("in server", text))}></div>;
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/core";
import { _regSymbol } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
export const Works = /*#__PURE__*/ componentQrl(
  /*#__PURE__*/ inlinedQrl((props) => {
    return /*#__PURE__*/ _jsxSorted(
      "div",
      {
        "q-e:click": serverQrl(
          /*#__PURE__*/ inlinedQrl(
            /*#__PURE__*/ _regSymbol(() => console.log("in server", "hola"), "q39lOt7xGrI"),
            "Works_component_div_q_e_click_server_q39lOt7xGrI",
          ),
        ),
      },
      null,
      null,
      2,
      "u6_0",
    );
  }, "Works_component_t45qL4vNGv0"),
);
== DIAGNOSTICS ===

[]
