crates/swc-optimizer/core/src/snapshots/qwik_core__test__example_renamed_exports.snap
---
source: src/test.rs
expression: output
---
=== INPUT ===
import { component$ as Component, $ as onRender, useStore } from "@qwik.dev/core";

export const App = Component((props) => {
  const state = useStore({ thing: 0 });

  return onRender(() => <div>{state.thing}</div>);
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_Component_XXXXXXXXXXXX");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_Component_XXXXXXXXXXXX"),
);
=== test.tsx_App_Component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_Component_1_XXXXXXXXXXXX");
export const App_Component_XXXXXXXXXXXX = (props) => {
  const state = useStore({
    thing: 0,
  });
  return /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_Component_1_XXXXXXXXXXXX", [state]);
};
/*
{
  "origin": "test.tsx",
  "name": "App_Component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_Component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_Component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/
=== test.tsx_App_Component_1_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
export const App_Component_1_XXXXXXXXXXXX = () => {
  const state = _captures[0];
  return /* @__PURE__ */ _jsxSorted("div", null, null, _wrapProp(state, "thing"), 3, "u6_0");
};
/*
{
  "origin": "test.tsx",
  "name": "App_Component_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_Component_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_Component_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_Component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "captureNames": [
    "state"
  ]
}
*/
== DIAGNOSTICS ===

[]
